YUK-22359 Prevent DNP "Function Code Not Supported" from wiping out command results Changed to include result strings even when returns are not successful