@@ -2,7 +2,6 @@ package com.cannontech.web.tools.commander.model;
 
 import static org.junit.Assert.assertEquals;
 
-import java.util.Collections;
 import java.util.Date;
 import java.util.List;
 
@@ -33,11 +32,13 @@ public class CommandResponseTest {
         
         var cr = CommandResponse.of(RESPONSE_ID, rtn);
         
-        assertEquals(List.of("This string has multiple lines.", "See?", "Here's another."), cr.getResults());
+        assertEquals(
+                List.of("This string has multiple lines.", "See?", "Here's another."), 
+                cr.getResults());
     }
 
     @Test
-    public void test_errorReturnTextIsExcluded() {
+    public void test_errorReturnTextIsIncluded() {
         var rtn = new Return();
 
         rtn.setDeviceID(DEVICE_ID);
@@ -50,6 +51,8 @@ public class CommandResponseTest {
         
         var cr = CommandResponse.of(RESPONSE_ID, rtn);
         
-        assertEquals(Collections.emptyList(), cr.getResults());
+        assertEquals(
+            List.of("This string has multiple lines.", "See?", "Here's another."), 
+            cr.getResults());
     }
 }
